--- a/src/app/users/dashboard/dashboard.component.css
+++ b/src/app/users/dashboard/dashboard.component.css
@@ -135,3 +135,35 @@ img {
   height: 30%;
   margin-top: 1%;
 }
+
+.footerboxes {
+    font-size: 18px;
+    height:100px;
+}
+
+.footerboxes p {
+    font-size: 52px;
+    height:100px;
+}
+
+@media screen and (max-width: 720px) {
+    .footerboxes p {
+        font-size: 36px;
+        height:100px;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .footerboxes p {
+        font-size: 24px;
+        height:100px;
+    }
+}
+
+.mydots {
+    left:0; width:100%; z-index:0; display: inline; bottom:-30px;
+}
+
+.carousel-inner {
+   margin-bottom:30px;
+}
