--- a/src/app/users/dashboard/dashboard.component.html
+++ b/src/app/users/dashboard/dashboard.component.html
@@ -1,224 +1,239 @@
 <div class="type">
-  <input id="tab1" type="radio" name="tabs" checked>
-  <label id="l1" for="tab1">Investor</label>
+    <input id="tab1" type="radio" name="tabs" checked>
+    <label id="l1" for="tab1">Investor</label>
 
-  <input id="tab2" type="radio" name="tabs" routerLink="/myprojects">
-  <label for="tab2">Developer</label>
+    <input id="tab2" type="radio" name="tabs" routerLink="/myprojects">
+    <label for="tab2">Developer</label>
 </div>
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <img class="d-block img-fluid" src="../../../assets/images/graph.png" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="../../../assets/images/graph1.png" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="../../../assets/images/graph2.png" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-   </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <h5>OPEN INVESTMENTS</h5>
-      <div id="currentPlayer" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#currentPlayer" data-slide-to="0" class="active"></li>
-        <li data-target="#currentPlayer" data-slide-to="1"></li>
-        <li data-target="#currentPlayer" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <table class="table borderless">
-            <tbody>
-              <tr>
-                <td>Index Watcher</td>
-                <td>Maurice Yap</td>
-                <td>$12</td>
-              </tr>
-              <tr>
-                <td>Reactive</td>
-                <td>Abbie Howell</td>
-                <td>$300</td>
-              </tr>
-              <tr>
-                <td>Index Points</td>
-                <td>Phuong Nam Do</td>
-                <td>$500</td>
-              </tr>
-            </tbody>
-          </table>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators mydots">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <h5 style="text-align: center">Overall statistics <br /></h5>
+                        <br />
+                        <img class="d-block img-fluid" src="../../../assets/images/graph.png" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <h5 style="text-align: center">Stats for "IndexWatcher" <br /></h5>
+                        <br />
+                        <img class="d-block img-fluid" src="../../../assets/images/graph1.png" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <h5 style="text-align: center">Stats for "Reactive" <br /></h5>
+                        <br />
+                        <img class="d-block img-fluid" src="../../../assets/images/graph2.png" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
-        <div class="carousel-item">
-          <table class="table borderless">
-            <tbody>
-              <tr>
-                <td>Index Watcher</td>
-                <td>Maurice Yap</td>
-                <td>$12</td>
-              </tr>
-              <tr>
-                <td>Reactive</td>
-                <td>Abbie Howell</td>
-                <td>$300</td>
-              </tr>
-              <tr>
-                <td>Index Points</td>
-                <td>Phuong Nam Do</td>
-                <td>$500</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="carousel-item">
-          <table class="table borderless">
-            <tbody>
-              <tr>
-                <td>Index Watcher</td>
-                <td>Maurice Yap</td>
-                <td>$12</td>
-              </tr>
-              <tr>
-                <td>Reactive</td>
-                <td>Abbie Howell</td>
-                <td>$300</td>
-              </tr>
-              <tr>
-                <td>Index Points</td>
-                <td>Phuong Nam Do</td>
-                <td>$500</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
     </div>
 
-    <div class="col-md-6">
-      <h5>WATCHED ALGORITHMS</h5>
-      <div id="suggestedPlayer" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#suggestedPlayer" data-slide-to="0" class="active"></li>
-        <li data-target="#suggestedPlayer" data-slide-to="1"></li>
-        <li data-target="#suggestedPlayer" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <table class="table borderless">
-            <tbody>
-              <tr>
-                <td>Random Allocation</td>
-                <td>Dheeraj Geetala</td>
-                <td>-$200</td>
-              </tr>
-              <tr>
-                <td>Constant Ticking</td>
-                <td>Bob Guns</td>
-                <td>$10</td>
-              </tr>
-              <tr>
-                <td>Stable Slide</td>
-                <td>Jason Cri</td>
-                <td>-$1000</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="carousel-item">
-          <table class="table borderless">
-            <tbody>
-              <tr>
-                <td>Random Allocation</td>
-                <td>Dheeraj Geetala</td>
-                <td>-$200</td>
-              </tr>
-              <tr>
-                <td>Constant Ticking</td>
-                <td>Bob Guns</td>
-                <td>$10</td>
-              </tr>
-              <tr>
-                <td>Stable Slide</td>
-                <td>Jason Cri</td>
-                <td>-$1000</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="carousel-item">
-          <table class="table borderless">
-            <tbody>
-              <tr>
-                <td>Random Allocation</td>
-                <td>Dheeraj Geetala</td>
-                <td>-$200</td>
-              </tr>
-              <tr>
-                <td>Constant Ticking</td>
-                <td>Bob Guns</td>
-                <td>$10</td>
-              </tr>
-              <tr>
-                <td>Stable Slide</td>
-                <td>Jason Cri</td>
-                <td>-$1000</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
+    <div class="row">
+        <div class="col-md-6">
+            <h5>OPEN INVESTMENTS</h5>
+            <div id="currentPlayer" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators mydots">
+                    <li data-target="#currentPlayer" data-slide-to="0" class="active"></li>
+                    <li data-target="#currentPlayer" data-slide-to="1"></li>
+                    <li data-target="#currentPlayer" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <table class="table borderless">
+                            <tbody>
+                                <tr>
+                                    <td>Index Watcher</td>
+                                    <td>Maurice Yap</td>
+                                    <td>$12</td>
+                                </tr>
+                                <tr>
+                                    <td>Reactive</td>
+                                    <td>Abbie Howell</td>
+                                    <td>$300</td>
+                                </tr>
+                                <tr>
+                                    <td>Index Points</td>
+                                    <td>Phuong Nam Do</td>
+                                    <td>$500</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="carousel-item">
+                        <table class="table borderless">
+                            <tbody>
+                                <tr>
+                                    <td>Index Watcher</td>
+                                    <td>Maurice Yap</td>
+                                    <td>$12</td>
+                                </tr>
+                                <tr>
+                                    <td>Reactive</td>
+                                    <td>Abbie Howell</td>
+                                    <td>$300</td>
+                                </tr>
+                                <tr>
+                                    <td>Index Points</td>
+                                    <td>Phuong Nam Do</td>
+                                    <td>$500</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="carousel-item">
+                        <table class="table borderless">
+                            <tbody>
+                                <tr>
+                                    <td>Index Watcher</td>
+                                    <td>Maurice Yap</td>
+                                    <td>$12</td>
+                                </tr>
+                                <tr>
+                                    <td>Reactive</td>
+                                    <td>Abbie Howell</td>
+                                    <td>$300</td>
+                                </tr>
+                                <tr>
+                                    <td>Index Points</td>
+                                    <td>Phuong Nam Do</td>
+                                    <td>$500</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
 
-  <div class="row col-md-12">
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6" style="padding-left:5px;">
+            <h5>WATCHING ALGORITHMS</h5>
+            <div id="suggestedPlayer" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators mydots">
+                    <li data-target="#suggestedPlayer" data-slide-to="0" class="active"></li>
+                    <li data-target="#suggestedPlayer" data-slide-to="1"></li>
+                    <li data-target="#suggestedPlayer" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <table class="table borderless">
+                            <tbody>
+                                <tr>
+                                    <td>Random Allocation</td>
+                                    <td>Dheeraj Geetala</td>
+                                    <td>-$200</td>
+                                </tr>
+                                <tr>
+                                    <td>Constant Ticking</td>
+                                    <td>Bob Guns</td>
+                                    <td>$10</td>
+                                </tr>
+                                <tr>
+                                    <td>Stable Slide</td>
+                                    <td>Jason Cri</td>
+                                    <td>-$1000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="carousel-item">
+                        <table class="table borderless">
+                            <tbody>
+                                <tr>
+                                    <td>Random Allocation</td>
+                                    <td>Dheeraj Geetala</td>
+                                    <td>-$200</td>
+                                </tr>
+                                <tr>
+                                    <td>Constant Ticking</td>
+                                    <td>Bob Guns</td>
+                                    <td>$10</td>
+                                </tr>
+                                <tr>
+                                    <td>Stable Slide</td>
+                                    <td>Jason Cri</td>
+                                    <td>-$1000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="carousel-item">
+                        <table class="table borderless">
+                            <tbody>
+                                <tr>
+                                    <td>Random Allocation</td>
+                                    <td>Dheeraj Geetala</td>
+                                    <td>-$200</td>
+                                </tr>
+                                <tr>
+                                    <td>Constant Ticking</td>
+                                    <td>Bob Guns</td>
+                                    <td>$10</td>
+                                </tr>
+                                <tr>
+                                    <td>Stable Slide</td>
+                                    <td>Jason Cri</td>
+                                    <td>-$1000</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="row col-md-12">
+        <div class="well">
+            Price data correct as of 15 minutes ago.
+        </div>
+    </div>
+    <div style="height:150px">
+        &nbsp;
+    </div>
+
+</div>
+
+<div class="row" style="position: fixed;height: 100px; bottom: 0;left:0;width: 100%;">
     <div class="col">
-       <div class="well" style="background-color: #FFBC20">Lifetime Investor
-         <p>
-           £3,489
-         </p>
-       </div>
-     </div>
-     <div class="col">
-        <div class="well" style="background-color: #11ABFD">Average profit split
-          <p>
-            48:52
-          </p>
+        <div class="footerboxes" style="background-color: #FFBC20;  ">Lifetime Investments
+            <p>
+                £34,489
+            </p>
         </div>
-      </div>
-      <div class="col">
-         <div class="well" style="background-color: var(--green)">Ave profit per week
-           <p>
-             £12
-           </p>
-         </div>
-       </div>
-  </div>
-
-  <div class="row col-md-12">
-    <div class="well">
-      blahblah blah
     </div>
-  </div>
+    <div class="col">
+        <div class="footerboxes" style="background-color: #11ABFD;">Average profit split
+            <p>
+                48:52
+            </p>
+        </div>
+    </div>
+    <div class="col">
+        <div class="footerboxes" style="background-color: var(--green); ">Ave profit per week
+            <p>
+                £34,489
+            </p>
+        </div>
+    </div>
 </div>
