--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -11,7 +11,7 @@
             <mfDefaultSorter by="email">Author</mfDefaultSorter>
         </th>
         <th style="width: 20%">
-            <mfDefaultSorter by="age">Split</mfDefaultSorter>
+            <mfDefaultSorter [by]="sortBySplit">Split</mfDefaultSorter>
         </th>
         <th style="width: 20%">
             <mfDefaultSorter by="city">Lifetime Returns</mfDefaultSorter>
