--- a/src/app/users/leaderboards/leaderboards.component.html
+++ b/src/app/users/leaderboards/leaderboards.component.html
@@ -14,7 +14,7 @@
             <mfDefaultSorter [by]="sortBySplit">Split</mfDefaultSorter>
         </th>
         <th style="width: 20%">
-            <mfDefaultSorter by="city">Lifetime Returns</mfDefaultSorter>
+            <mfDefaultSorter [by]="sortByTotal">Lifetime Returns</mfDefaultSorter>
         </th>
         <th style="width: 10%">
             <mfDefaultSorter [by]="sortByRisk">Risk</mfDefaultSorter>
